force-app/main/default/objects/Hist_rico_da_cobran_a__c/Hist_rico_da_cobran_a__c.object-meta.xml
<CustomObject>
    <label>Histórico da cobrança</label>
    <nameField>
        <displayFormat>HC-{0000}</displayFormat>
        <label>Histórico de Cobrança</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos da cobrança</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>