force-app/main/default/objects/Hist_rico_da_cobran_a__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Históricos da cobrança</relationshipLabel>
    <relationshipName>Hist_ricos_da_cobran_a</relationshipName>
    <type>Lookup</type>
</CustomField>