force-app/main/default/objects/Hist_rico_da_cobran_a__c/fields/Contato_com_cliente__c.field-meta.xml
<CustomField>
    <fullName>Contato_com_cliente__c</fullName>
    <label>Contato com cliente</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>