force-app/main/default/objects/Hist_rico_da_cobran_a__c/fields/Data_Prevista__c.field-meta.xml
<CustomField>
    <fullName>Data_Prevista__c</fullName>
    <label>Data Prevista</label>
    <type>Date</type>
</CustomField>