force-app/main/default/objects/Hist_rico_da_cobran_a__c/fields/Estado_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Estado_da_conta__c</fullName>
    <label>Estado da conta</label>
    <type>TextArea</type>
</CustomField>