force-app/main/default/objects/Hist_rico_da_cobran_a__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Históricos da cobrança</relationshipLabel>
    <relationshipName>Hist_ricos_da_cobran_a</relationshipName>
    <type>Lookup</type>
</CustomField>