force-app/main/default/objects/Hist_rico_da_cobran_a__c/fields/status_imagem__c.field-meta.xml
<CustomField>
    <fullName>status_imagem__c</fullName>
    <formula>IF(
    ISBLANK(Data_do_pr_ximo_contato__c),
    IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=01531000008stX6&amp;oid=00Di0000000JVhH&amp;lastMod=1502729868000&quot;, &quot;Sem Data&quot;, 40, 40),
    IF(
        Data_do_pr_ximo_contato__c &lt; TODAY(),
        IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=01531000008stOs&amp;oid=00Di0000000JVhH&amp;lastMod=1502730159000&quot;, &quot;Data Passada&quot;, 40, 40),
        IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=01531000008stS6&amp;oid=00Di0000000JVhH&amp;lastMod=1502730193000&quot;, &quot;Data Futura&quot;, 40, 40)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Prevista</label>
    <type>Text</type>
</CustomField>