force-app/main/default/objects/Hist_rico_da_cobran_a__c/recordTypes/Cobran_a_Comum.recordType-meta.xml
<RecordType>
    <fullName>Cobran_a_Comum</fullName>
    <active>true</active>
    <label>Cobrança Comum</label>
</RecordType>