force-app/main/default/objects/Hist_rico_da_cobran_a__c/recordTypes/Cobran_a_de_Empenho.recordType-meta.xml
<RecordType>
    <fullName>Cobran_a_de_Empenho</fullName>
    <active>true</active>
    <label>Cobrança de Empenho</label>
</RecordType>