force-app/main/default/objects/Hist_rico_da_cobran_a__c/validationRules/Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Data</fullName>
    <active>true</active>
    <errorConditionFormula>Data_Prevista__c == null &amp;&amp; TEXT( Status__c ) == &apos;Sem previsão&apos;</errorConditionFormula>
    <errorDisplayField>Data_Prevista__c</errorDisplayField>
    <errorMessage>Você deve preencher o campo &quot;Data Prevista&quot; quando o Status for igual a &quot;Sem previsão&quot;</errorMessage>
</ValidationRule>