force-app/main/default/objects/Hist_rico_da_cobran_a__c/validationRules/Data_do_proximo_contato_menor_5_dias.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_do_proximo_contato_menor_5_dias</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Data_do_pr_ximo_contato__c &gt; 
        CASE(
            WEEKDAY(TODAY()), 
            1, TODAY() + 7,  
            2, TODAY() + 7,  
            3, TODAY() + 7,  
            4, TODAY() + 7,  
            5, TODAY() + 9,  
            6, TODAY() + 9,  
            TODAY() + 8      
        )
)</errorConditionFormula>
    <errorDisplayField>Data_Prevista__c</errorDisplayField>
    <errorMessage>A data do próximo contato deve ser de no máximo 5 dias úteis</errorMessage>
</ValidationRule>