force-app/main/default/objects/Hist_rico_da_cobran_a__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Pessoa_contatada__c</columns>
    <columns>Status__c</columns>
    <columns>Contato_com_cliente__c</columns>
    <columns>Resposta_do_cliente__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>